--- a/bank soal.html
+++ b/bank soal.html
@@ -319,7 +319,7 @@
           <img src="pancasila6.png" alt="Pancasila">
           <div class="content">
             <h3>Pancasila</h3>
-            <a href="pancasila6.html" target="_blank" rel="noopener">Lihat</a>
+            <a href="pancasila6beberapaFormatif.html" target="_blank" rel="noopener">Lihat</a>
           </div>
         </article>
 
