pancasila6beberapaFormatif.html

--- a/pancasila6beberapaFormatif.html
+++ b/pancasila6beberapaFormatif.html
@@ -173,13 +173,13 @@
   <main class="container">
 
     <section class="category" id="bab1">
-      <h2>BAB 1: Bangga Menjadi Anak Indonesia</h2>
+      <h2>BAB 1: Belajar Pancasila dengan Menyenangkan</h2>
       <div class="menu-list">
         <div class="menu-item"><a href="soal_indo_formatif_materi1_bab1.html">Formatif Materi 1</a></div>
         <div class="menu-item"><a href="soal_indo_formatif_materi2_bab1.html">Formatif Materi 2</a></div>
         <div class="menu-item"><a href="soal_indo_formatif_materi3_bab1.html">Formatif Materi 3</a></div>
         <div class="menu-item"><a href="soal_indo_formatif_materi4_bab1.html">Formatif Materi 4</a></div>
-        <div class="menu-item"><a href="soal_indo_formatif_bab1.html">Formatif BAB 1</a></div>
+        <div class="menu-item"><a href="soal_Pancasila_formatif_materi1_bab1.html">Formatif BAB 1</a></div>
       </div>
     </section>
 
