--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="flex items-center space-x-4">
                     <!-- Logo Image - Ganti src dengan path gambar Anda -->
                     <div class="bg-gradient-to-br from-blue-50 to-blue-100 p-2 rounded-xl shadow-sm logo-float">
-                        <img src="logo.png" 
+                        <img src="/assets/img/logo.png" 
                              alt="Logo Pembelajaran Bermakna" 
                              class="w-10 h-10 object-contain rounded-lg"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
